# src/main/resources/archetype-resources/__rootArtifactId__-web/src/main/java/web/resources/UsersApi.java
@@ -1,40 +1,39 @@
 #set( $symbol_pound = '#' )
 #set( $symbol_dollar = '$' )
 #set( $symbol_escape = '\' )
-/**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.10.0).
+/*
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.16.0).
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
 package ${package}.web.resources;
 
 import ${package}.model.User;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springdoc.core.annotations.ParameterObject;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
-import io.swagger.v3.oas.annotations.enums.ParameterIn;
 import io.swagger.v3.oas.annotations.media.ArraySchema;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import jakarta.annotation.Generated;
-import jakarta.validation.constraints.Min;
-import org.springdoc.core.annotations.ParameterObject;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
-import org.springframework.http.ProblemDetail;
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.*;
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-04-06T17:13:49.263043900+02:00[Europe/Rome]", comments = "Generator version: 7.10.0")
+import jakarta.validation.constraints.*;
+import jakarta.annotation.Generated;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2026-09-17T16:52:13.140617300+02:00[Europe/Rome]", comments = "Generator version: 7.16.0")
 @Validated
 @Tag(name = "User", description = "Operation concerning Users")
 @RequestMapping("${symbol_dollar}{openapi.exampleRestArchetype.base-path:}")
 public interface UsersApi {
 
+    String PATH_GET_USER_ID = "/users/{id}";
     /**
      * GET /users/{id} : Get User with respective ID
      * Get user by his ID.
@@ -42,6 +41,8 @@ public interface UsersApi {
      * @param id The ID of object to be returned (required)
      * @return Successful operation (status code 200)
      *         or Bad Request (status code 400)
+     *         or Unauthorized (status code 401)
+     *         or Forbidden (status code 403)
      *         or Not Found (status code 404)
      *         or Internal Server Error (status code 500)
      */
@@ -52,32 +53,37 @@ public interface UsersApi {
         tags = { "User" },
         responses = {
             @ApiResponse(responseCode = "200", description = "Successful operation", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = User.class)),
-                @Content(mediaType = "application/xml", schema = @Schema(implementation = User.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = User.class))
             }),
             @ApiResponse(responseCode = "400", description = "Bad Request", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = ProblemDetail.class)),
-                @Content(mediaType = "application/xml", schema = @Schema(implementation = ProblemDetail.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = org.springframework.http.ProblemDetail.class))
+            }),
+            @ApiResponse(responseCode = "401", description = "Unauthorized", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = org.springframework.http.ProblemDetail.class))
+            }),
+            @ApiResponse(responseCode = "403", description = "Forbidden", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = org.springframework.http.ProblemDetail.class))
             }),
             @ApiResponse(responseCode = "404", description = "Not Found", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = ProblemDetail.class)),
-                @Content(mediaType = "application/xml", schema = @Schema(implementation = ProblemDetail.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = org.springframework.http.ProblemDetail.class))
             }),
             @ApiResponse(responseCode = "500", description = "Internal Server Error", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = ProblemDetail.class)),
-                @Content(mediaType = "application/xml", schema = @Schema(implementation = ProblemDetail.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = org.springframework.http.ProblemDetail.class))
             })
         }
     )
-    @GetMapping(
-        value = "/users/{id}",
-        produces = { "application/json", "application/xml" }
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = UsersApi.PATH_GET_USER_ID,
+        produces = { "application/json" }
     )
+    
     ResponseEntity<User> getUserId(
-        @Min(0L) @Parameter(name = "id", description = "The ID of object to be returned", required = true, in = ParameterIn.PATH) @PathVariable("id") Long id
+            @PathVariable @NotNull @Min(0L) @Parameter(name = "id", description = "The ID of object to be returned", required = true, in = ParameterIn.PATH) Long id
     );
 
 
+    String PATH_GET_USER_ID_WITH_ROLES = "/users/roles/{id}";
     /**
      * GET /users/roles/{id} : Get User with his Roles from ID
      * Get user (with roles) by his ID.
@@ -85,6 +91,8 @@ public interface UsersApi {
      * @param id The ID of object to be returned (required)
      * @return Successful operation (status code 200)
      *         or Bad Request (status code 400)
+     *         or Unauthorized (status code 401)
+     *         or Forbidden (status code 403)
      *         or Not Found (status code 404)
      *         or Internal Server Error (status code 500)
      */
@@ -95,38 +103,45 @@ public interface UsersApi {
         tags = { "User" },
         responses = {
             @ApiResponse(responseCode = "200", description = "Successful operation", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = User.class)),
-                @Content(mediaType = "application/xml", schema = @Schema(implementation = User.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = User.class))
             }),
             @ApiResponse(responseCode = "400", description = "Bad Request", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = ProblemDetail.class)),
-                @Content(mediaType = "application/xml", schema = @Schema(implementation = ProblemDetail.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = org.springframework.http.ProblemDetail.class))
+            }),
+            @ApiResponse(responseCode = "401", description = "Unauthorized", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = org.springframework.http.ProblemDetail.class))
+            }),
+            @ApiResponse(responseCode = "403", description = "Forbidden", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = org.springframework.http.ProblemDetail.class))
             }),
             @ApiResponse(responseCode = "404", description = "Not Found", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = ProblemDetail.class)),
-                @Content(mediaType = "application/xml", schema = @Schema(implementation = ProblemDetail.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = org.springframework.http.ProblemDetail.class))
             }),
             @ApiResponse(responseCode = "500", description = "Internal Server Error", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = ProblemDetail.class)),
-                @Content(mediaType = "application/xml", schema = @Schema(implementation = ProblemDetail.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = org.springframework.http.ProblemDetail.class))
             })
         }
     )
-    @GetMapping(
-        value = "/users/roles/{id}",
-        produces = { "application/json", "application/xml" }
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = UsersApi.PATH_GET_USER_ID_WITH_ROLES,
+        produces = { "application/json" }
     )
+    
     ResponseEntity<User> getUserIdWithRoles(
-        @Min(0L) @Parameter(name = "id", description = "The ID of object to be returned", required = true, in = ParameterIn.PATH) @PathVariable("id") Long id
+            @PathVariable @NotNull @Min(0L) @Parameter(name = "id", description = "The ID of object to be returned", required = true, in = ParameterIn.PATH) Long id
     );
 
 
+    String PATH_GET_USERS = "/users";
     /**
      * GET /users : Gets all User
      * Gets all users present.
      *
      * @return Successful operation (status code 200)
      *         or Bad Request (status code 400)
+     *         or Unauthorized (status code 401)
+     *         or Forbidden (status code 403)
      *         or Not Found (status code 404)
      *         or Internal Server Error (status code 500)
      */
@@ -137,27 +152,31 @@ public interface UsersApi {
         tags = { "User" },
         responses = {
             @ApiResponse(responseCode = "200", description = "Successful operation", content = {
-                @Content(mediaType = "application/json", array = @ArraySchema(schema = @Schema(implementation = User.class))),
-                @Content(mediaType = "application/xml", array = @ArraySchema(schema = @Schema(implementation = User.class)))
+                @Content(mediaType = "application/json", array = @ArraySchema(schema = @Schema(implementation = User.class)))
             }),
             @ApiResponse(responseCode = "400", description = "Bad Request", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = ProblemDetail.class)),
-                @Content(mediaType = "application/xml", schema = @Schema(implementation = ProblemDetail.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = org.springframework.http.ProblemDetail.class))
+            }),
+            @ApiResponse(responseCode = "401", description = "Unauthorized", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = org.springframework.http.ProblemDetail.class))
+            }),
+            @ApiResponse(responseCode = "403", description = "Forbidden", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = org.springframework.http.ProblemDetail.class))
             }),
             @ApiResponse(responseCode = "404", description = "Not Found", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = ProblemDetail.class)),
-                @Content(mediaType = "application/xml", schema = @Schema(implementation = ProblemDetail.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = org.springframework.http.ProblemDetail.class))
             }),
             @ApiResponse(responseCode = "500", description = "Internal Server Error", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = ProblemDetail.class)),
-                @Content(mediaType = "application/xml", schema = @Schema(implementation = ProblemDetail.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = org.springframework.http.ProblemDetail.class))
             })
         }
     )
-    @GetMapping(
-        value = "/users",
-        produces = { "application/json", "application/xml" }
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = UsersApi.PATH_GET_USERS,
+        produces = { "application/json" }
     )
+    
     ResponseEntity<Page<User>> getUsers(@ParameterObject final Pageable pageable);
 
 }
